force-app/main/default/objects/Data_Load_Sync_Logs__c/Data_Load_Sync_Logs__c.object-meta.xml
<CustomObject>
    <label>Data Load Sync Log</label>
    <nameField>
        <displayFormat>DL-{000000}</displayFormat>
        <label>Data Load Sync Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Load Sync Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>