force-app/main/default/objects/Data_Load_Sync_Logs__c/fields/Error_messages__c.field-meta.xml
<CustomField>
    <fullName>Error_messages__c</fullName>
    <label>Error messages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>