force-app/main/default/objects/Data_Load_Sync_Logs__c/fields/Total_unprocessed_records__c.field-meta.xml
<CustomField>
    <fullName>Total_unprocessed_records__c</fullName>
    <label>Total unprocessed records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>