force-app/main/default/objects/Data_Load_Sync_Logs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_processed_records__c</columns>
    <columns>Total_inserted_records__c</columns>
    <columns>Total_updated_records__c</columns>
    <columns>Total_unprocessed_records__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>